--- a/style.css
+++ b/style.css
@@ -39,11 +39,22 @@ section {
   height: 100%;
   width: 100%;
 }
+
 .carousel-caption {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%)
+  position:   absoute;   /* relative | absolute */
+  bottom :        10%;      /* top | bottom (0px is top of element) */
+  left:          -45%;       /* left | right (0% is left of element) */
+  padding: 5px;
+
 }
+
+.carousel-caption-two {
+  position:   absolute;   /* relative | absolute */
+  top: 35%;    /* top | bottom (0px is top of element) */
+  right:           35%;       /* left | right (0% is left of element) */
+  padding:5px;
+}
+
 .carousel-caption h1 {
   font-size: 500%;
   text-transform: uppercase;
@@ -173,9 +184,7 @@ hr.thick {
     width: 100%;
     height: 800px;
   }
-  .carousel-caption {
-    top: 55%;
-  }
+
   .carousel-caption h1 {
     font-size: 450%
   }
@@ -198,6 +207,12 @@ hr.thick {
   .immProgetto{
     width:250px;
   }
+  .carousel-caption {
+    font-size: 200%;
+  }
+  .carousel-caption-two {
+    font-size: 200%;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -205,7 +220,7 @@ hr.thick {
     width: 300px;
   }
 
-
+}
 
 @media (max-width: 992px) {
   .nav-logo {
@@ -226,9 +241,7 @@ hr.thick {
   .studio-image {
     width:90%;
   }
-  .carousel-caption {
-    top: 45%;
-  }
+
   .carousel-caption h1 {
     font-size: 350%
   }
@@ -248,6 +261,21 @@ hr.thick {
     font-size: 2.5em;
     padding: 1.2rem;
   }
+
+  .carousel-caption {
+    position:   absolute;   /* relative | absolute */
+    bottom :        5%;      /* top | bottom (0px is top of element) */
+    left:          -45%;       /* left | right (0% is left of element) */
+    padding:5px;
+  }
+
+  .carousel-caption-two {
+    position:   absolute;   /* relative | absolute */
+    top: 27%;    /* top | bottom (0px is top of element) */
+    right:           15%;       /* left | right (0% is left of element) */
+    padding:5px;
+  }
+
 }
 @media (max-width: 576px) {
   .card-block{
@@ -261,9 +289,6 @@ hr.thick {
   }
   .studio-image {
     width:100%;
-  }
-  .carousel-caption {
-    top: 40%;
   }
   .carousel-caption h1 {
     font-size: 250%
